ChangeLog PredictR

PredictR-1.11
 - If CBI disabled, do not display the command in the list
 - Made the Total Prediction more obvious at the top.
 - Cleaned up layout
 - Include warning for salinity
 - Include warning for recording

PredictR-1.10
 * Fixed amplitude being disabled with PD0
 * Made PD0 only disable specific data types
 * Fixed bug in setting the profile range greater than 1000.

PredictR-1.9
 * Fixed setting CBTON 0
 * Removed option to turn off serial communication

PredictR-1.8
 * Added PD0 data storage size.
 * Added Coordinate Transform for PD0.

PredictR-1.7
 * Added Beam Angle to fix vertical beam calculations
 * Fixed the overall accumulated prediction model for the number of configurations.
 * Set CBI to 0 ensembles if CBI is turned off to ensure it is turned off.

PredictR-1.6
 * Changed the CepoIndex in the command to a Hex value.

PredictR-1.5
 - Added Scrollbar to view.

PredictR-1.4
 * Fixed bug with Max Velocity and Narrowband
 * Added Speed of Sound to the predictor.

PredictR-1.3
 - Updated the Prediction Model to Rev Y

PredictR-1.2
 - Updated the Prediction Model to Rev X
 - Added Beam Angle
 - Added Number of beams

PredictR-1.1
 - Updated the Prediction Model to Rev W

PredictR-1.0
 - Initial release