@@ -25,14 +25,14 @@
         <item row="1" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>CWPON</string>
+           <string>ON or OFF</string>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>CWPBL (m)</string>
+           <string>First Bin Depth [Blank] (m)</string>
           </property>
          </widget>
         </item>
@@ -49,7 +49,7 @@
         <item row="3" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>CWPBS (m)</string>
+           <string>Bin Size (m)</string>
           </property>
          </widget>
         </item>
@@ -72,7 +72,7 @@
         <item row="4" column="0">
          <widget class="QLabel" name="label_4">
           <property name="text">
-           <string>CWPBN (bins)</string>
+           <string>Number of Bins (bins)</string>
           </property>
          </widget>
         </item>
@@ -92,7 +92,7 @@
         <item row="5" column="0">
          <widget class="QLabel" name="label_5">
           <property name="text">
-           <string>CWPBB Lag Length (m)</string>
+           <string>Lag Length (m)</string>
           </property>
          </widget>
         </item>
@@ -122,7 +122,7 @@
         <item row="7" column="0">
          <widget class="QLabel" name="label_7">
           <property name="text">
-           <string>CWPP (pings)</string>
+           <string>Pings to Average (pings)</string>
           </property>
          </widget>
         </item>
@@ -139,7 +139,7 @@
         <item row="8" column="0">
          <widget class="QLabel" name="label_8">
           <property name="text">
-           <string>CWPTBP (s)</string>
+           <string>Time Between Average Pings (s)</string>
           </property>
          </widget>
         </item>
@@ -174,7 +174,7 @@
           <item row="0" column="0">
            <widget class="QLabel" name="label_9">
             <property name="text">
-             <string>CBTON</string>
+             <string>ON or OFF</string>
             </property>
            </widget>
           </item>
@@ -188,7 +188,7 @@
           <item row="1" column="0">
            <widget class="QLabel" name="label_10">
             <property name="text">
-             <string>CBTBB</string>
+             <string>Pulse Type</string>
             </property>
            </widget>
           </item>
@@ -198,7 +198,7 @@
           <item row="2" column="0">
            <widget class="QLabel" name="label_11">
             <property name="text">
-             <string>CBTTBP (s)</string>
+             <string>Time After BT (s)</string>
             </property>
            </widget>
           </item>
@@ -325,7 +325,7 @@
           <item row="1" column="0">
            <widget class="QLabel" name="label_12">
             <property name="text">
-             <string>Burst Mode ON</string>
+             <string>Burst Mode ON or OFF</string>
             </property>
            </widget>
           </item>
