@@ -4,10 +4,10 @@ block_cipher = None
 
 
 a = Analysis(['mainwindow.py'],
-             pathex=['C:\\Users\\rico\\AppData\\Roaming\\Python\\Python35\\site-packages\\PyQt5\\Qt\\bin', 'G:\\RTI\\python\\PredictR', 'G:\\RTI\\python\\PredictR\\rti_python'],
+             pathex=['C:\\Users\\rico\\Documents\\rti\\python\\PredictR\\venv\\Lib\\site-packages\\PyQt5\\Qt\\bin', 'C:\\Users\\rico\\Documents\\rti\\python\\PredictR', 'C:\\Users\\rico\\Documents\\rti\\python\\PredictR\PredictR_view' ,'C:\\Users\\rico\\Documents\\rti\\python\\PredictR\\rti_python'],
              binaries=[],
              datas=[('rti_python\\ADCP\\Predictor\\predictor.json', 'rti_python\\ADCP\\Predictor\\.'), ('rti.ico', '.'), ('rti_python\\ADCP\\AdcpCommands.json', 'rti_python\\ADCP\\.')],
-             hiddenimports=[],
+             hiddenimports=['pkg_resources.py2_warn'],
              hookspath=[],
              runtime_hooks=[],
              excludes=[],
